make the msg field on mobile fixed by screen

--- a/src/index.css
+++ b/src/index.css
@@ -127,11 +127,10 @@ input, button, textarea {
 .msg-form {
     width: 100%;
     height: 61px;
-    position: sticky;
 
-    margin: auto;
     padding: 4pt;
     box-sizing: border-box;
+    
     border-radius: 12px;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
@@ -141,6 +140,17 @@ input, button, textarea {
     display: flex;
     gap: 6pt;
     align-items: stretch;
+}
+
+.msg-form_mobile {
+    position: fixed;
+    
+    max-width: var(--container-max-width);
+    padding-left: 16pt;
+    padding-right: 16pt;
+    
+    bottom: 0;
+    transform: translateX(-12pt);
 }
 
 .msg-form__field {
@@ -277,7 +287,9 @@ input, button, textarea {
 
 .app__container {
     /* height: var(--container-height); */
-    height: 41%;
+    max-width: inherit;
+    width: inherit;
+    height: 40%;
     /* max-height: var(--container-max-height); */
     flex-grow: 100;
 
@@ -378,8 +390,8 @@ input, button, textarea {
 
 
 .dialog {
+    width: inherit;
     height: 100%;
-    max-height: inherit;
 
     display: flex;
     flex-direction: column;
